[package]
name = "wsyeet"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Yeets a file's content line-by-line to WebSocket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
argparse = "0.2.2"
